--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -42,6 +42,10 @@
     background-color: #ffffff;
     margin: 30px auto;
     width: 100%;
+    max-width: 795px;
+    border: 2px solid #d1d1d1;
+    border-radius: 5px;
+    padding: 50px;
 }
 /* Mark input boxes that gets an error on validation: */
 input.invalid {
@@ -86,3 +90,20 @@ select.form-control {
     padding-right: 40px;
 }
 
+.page-header{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 795px;
+    .sub-heading{
+	font-size: rem(18px);
+	font-weight: 700;
+    }
+    .arrow-wrp{
+	display: inline-block;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	transform: translate(-100%,48%);
+    }
+}
