--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -45,7 +45,11 @@
     max-width: 795px;
     border: 2px solid #d1d1d1;
     border-radius: 5px;
-    padding: 50px;
+    padding: 50px 30px;
+    .btn{
+	margin-top: 30px;
+	min-width: 250px;
+    }
 }
 /* Mark input boxes that gets an error on validation: */
 input.invalid {
